Fix SVG size on IE.

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -178,6 +178,10 @@ a {
 a:hover {
   color: #66CC66; }
 
+/* Images
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+img {
+  width: 100%; }  /* fix for IE with SVG images */
 
 /* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
